update filter project